--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Paul's Portfolio Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous"> -->
+    <!-- Compiled and minified bootstrap 3.3.7 sourced from CDN: https://getbootstrap.com/docs/3.3/getting-started/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <!-- Customer CSS to over-ride Bootstrap -->
+    <!-- CSS over-ride for Bootstrap -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
-    <!-- <script src="main.js"></script> -->
-    <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
+
 </head>
 
 <body>
-    <!-- START NAVBAR -->
-
+    <!-- NAVBAR CODE BETWEEN THESE LINES -->
     <nav class="navbar navbar-default navbar-static-top">
+        <!-- Navbar container -->
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand navbar-custom" href="#">Paul Laird</a>
@@ -35,101 +32,140 @@
                 <li>
                     <a href="contact.html">Contact</a>
                 </li>
+                <!-- End of Menu items -->
             </ul>
+            <!-- End of Navbar container -->
         </div>
     </nav>
-    <!-- END OF NAVBAR -->
+    <!-- NAVBAR CODE BETWEEN THESE LINES -->
 
-    <!-- Main body of the webpage -->
+    <!-- Main body container -->
     <main class="container">
-        <!-- Row 1 of 2 (For the content of the webpage) -->
+        <!-- Start of first row -->
         <div class="row">
+            <!-- Portfolio columns -->
             <div class="col-md-8">
+                <!-- Portfolio panel -->
                 <div class="panel panel-default">
+                    <!-- Portfolio panel header -->
                     <div class="panel-heading">
                         <h1 class="panel-title">Portfolio</h1>
+                        <!-- End of Portfolio panel header -->
                     </div>
-
+                    <!-- Portfolio panel body -->
                     <div class="panel-body">
-
-                        <!-- About me section -->
-
-                        <!-- Body of the About Me section -->
-                        <!-- MAKING DEALS WEBPAGE -->
+                        <!-- Start of 1st row -->
                         <div class="row">
+
+                            <!-- Making Deals colums -->
                             <div class="col-sm-6">
+                                <!-- Making deals image container -->
                                 <div class="thumbnail">
                                     <img src="assets/images/deals.jpg" alt="Making Deals">
+                                    <!-- Descriptive banner overlapping photo -->
                                     <div class="caption">
-                                        <!-- PLEASE REVISIT THIS! WHEN CSS IS NOT ABSOLUTE (BANNER AT BASE OF PIC) IT'S CORRECT WIDTH, WHEN ABOLUTE IT GETS WIDER ON THE RIGHT -->
                                         <h4 class="text-center bannerColor">Making Deals</h4>
+                                        <!-- End of Descriptive banner overlapping photo -->
                                     </div>
+                                    <!-- End of Making deals image container -->
                                 </div>
+                                <!-- End of Making Deals colums -->
                             </div>
 
-                            <!-- ESPORTS WEBPAGE -->
+                            <!-- eSports colums -->
                             <div class="col-sm-6">
+                                <!-- eSports image container -->
                                 <div class="thumbnail">
                                     <img src="assets/images/eSports.jpg" alt="eSports">
+                                    <!-- Descriptive banner overlapping photo -->
                                     <div class="caption">
                                         <h4 class="text-center bannerColor">eSports</h4>
+                                        <!-- End of Descriptive banner overlapping photo -->
                                     </div>
+                                    <!-- End of eSports image container -->
                                 </div>
+                                <!-- End of eSports colums -->
                             </div>
+
+                            <!-- End of 1st row -->
                         </div>
 
-                        <!-- WORKING OUT WEBPAGE -->
+                        <!-- Start of 2nd row -->
                         <div class="row">
+
+                            <!-- Working out colums -->
                             <div class="col-sm-6">
+                                <!-- Working out image container -->
                                 <div class="thumbnail">
                                     <img src="assets/images/gym.jpg" alt="Those sweet gainz">
+                                    <!-- Descriptive banner overlapping photo -->
                                     <div class="caption">
                                         <h4 class="text-center bannerColor">Working Out</h4>
+                                        <!-- End of Descriptive banner overlapping photo -->
                                     </div>
+                                    <!-- End of Working out image container -->
                                 </div>
+                                <!-- End of Working out colums -->
                             </div>
 
-                            <!-- HIKE NH WEBPAGE -->
+                            <!-- Hike NH colums -->
                             <div class="col-sm-6">
+                                <!-- Hike NH image container -->
                                 <div class="thumbnail">
                                     <img src="assets/images/hikeNH.jpg" alt="Explore NH">
+                                    <!-- Descriptive banner overlapping photo -->
                                     <div class="caption">
                                         <h4 class="text-center bannerColor">Hike NH</h4>
+                                        <!-- End of Descriptive banner overlapping photo -->
                                     </div>
+                                    <!-- End of Hike NH image container -->
                                 </div>
+                                <!-- End of Hike NH colums -->
                             </div>
+
+                            <!-- End of 2nd row -->
                         </div>
 
-                        <!-- NIGHT SKY WEBPAGE -->
+                        <!-- Start of 3d row -->
                         <div class="row">
+
+                            <!-- Night Sky colums -->
                             <div class="col-sm-6">
+                                <!-- Night Sky image container -->
                                 <div class="thumbnail">
                                     <img src="assets/images/stars.jpg" alt="Night Sky">
+                                    <!-- Descriptive banner overlapping photo -->
                                     <div class="caption">
                                         <h4 class="text-center bannerColor">Night Sky</h4>
+                                        <!-- End of Descriptive banner overlapping photo -->
                                     </div>
+                                    <!-- End of Night Sky image container -->
                                 </div>
+                                <!-- End of Night Sky colums -->
                             </div>
-                            <div class="col-sm-6">
-                                <!-- Placeholder Space -->
-                            </div>
-                        </div>
 
+                            <!-- Start of 3d row -->
+                        </div>
+                        <!-- Portfolio panel body -->
                     </div>
+                    <!-- End of Portfolio panel -->
                 </div>
+                <!-- End of Portfolio columns -->
             </div>
             <!-- End of the ontainer for the portfolio -->
-            <!-- END OF ABOUT ME SECTION -->
-
-
 
             <!-- Connect with me section -->
             <div class="contact">
+                <!-- Connect with me columns -->
                 <div class="col-md-4">
+                    <!-- Connect with me panel -->
                     <div class="panel panel-default text-center">
+                        <!-- Connect with me pannel header -->
                         <div class="panel-heading">
                             <h2 class="panel-title">Connect with me</h2>
+                            <!-- End of Connect with me pannel header -->
                         </div>
+                        <!-- Connect with me panel body -->
                         <div class="panel-body">
                             <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
                             <!-- GitHub link -->
@@ -148,27 +184,33 @@
                                 <img class="img-thumbnail img-responsive" src="assets/images/stackoverflow.png" alt="See what I have to say on Stack Overflow">
                             </a>
                             <!-- LINKS IN THE CONNECT WITH ME SECTION GO BETWEEN THESE LINES -->
+                            <!-- End of Connect with me panel body -->
                         </div>
+                        <!-- End of Connect with me pannel -->
                     </div>
+                    <!-- End of Connect with me columns -->
                 </div>
+                <!-- End of connect with me section -->
             </div>
-
-
+            <!-- End of first row -->
         </div>
+        <!-- End of main body container -->
     </main>
-    <!-- END OF 1st ROW -->
 
-
-    <!-- BELOW IS THE FOOTER -->
-
+    <!-- FOOTER CODE BETWEEN THESE LINES -->
     <footer class="navbar navbar-default navbar-fixed-bottom">
+        <!-- Footer container -->
         <div class="container" id="footerCSS">
+            <!-- Copywright information -->
             <p class="navbar-text text-center">
+                <!-- Link back to portfolio page -->
                 <a href="http://laird.codes" target="_blank">© 2018 - Paul Laird</a>
+                <!-- End of Copywright information -->
             </p>
+            <!-- End of Footer container -->
         </div>
     </footer>
-
+    <!-- FOOTER CODE BETWEEN THESE LINES -->
 
 </body>
 
