Updated portfolio link

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,15 +60,17 @@
                             <!-- Making Deals colums -->
                             <div class="col-sm-6">
                                 <!-- Making deals image container -->
-                                <div class="thumbnail">
-                                    <img src="assets/images/deals.jpg" alt="Making Deals">
-                                    <!-- Descriptive banner overlapping photo -->
-                                    <div class="caption">
-                                        <h4 class="text-center bannerColor">Making Deals</h4>
-                                        <!-- End of Descriptive banner overlapping photo -->
+                                <a href="https://paullnh.github.io/Hangman-Game/index.html" target="_blank">
+                                    <div class="thumbnail">
+                                        <img src="assets/images/hangman.png" alt="Hangman">
+                                        <!-- Descriptive banner overlapping photo -->
+                                        <div class="caption">
+                                            <h4 class="text-center bannerColor">Hangman</h4>
+                                            <!-- End of Descriptive banner overlapping photo -->
+                                        </div>
+                                        <!-- End of Making deals image container -->
                                     </div>
-                                    <!-- End of Making deals image container -->
-                                </div>
+                                </a>
                                 <!-- End of Making Deals colums -->
                             </div>
 
