Adde colosseum RPG game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
                         <!-- Start of 1st row -->
                         <div class="row">
 
-                            <!-- Making Deals colums -->
+                            <!-- Hangman colums -->
                             <div class="col-sm-6">
-                                <!-- Making deals image container -->
+                                <!-- Hangman image container -->
                                 <a href="https://paullnh.github.io/Hangman-Game/index.html" target="_blank">
                                     <div class="thumbnail">
                                         <img src="assets/images/hangman.png" alt="Hangman">
@@ -68,25 +68,27 @@
                                             <h4 class="text-center bannerColor">Hangman</h4>
                                             <!-- End of Descriptive banner overlapping photo -->
                                         </div>
-                                        <!-- End of Making deals image container -->
+                                        <!-- End of Hangman image container -->
                                     </div>
                                 </a>
-                                <!-- End of Making Deals colums -->
+                                <!-- End of Hangman colums -->
                             </div>
 
-                            <!-- eSports colums -->
+                            <!-- Colosseum RPG colums -->
                             <div class="col-sm-6">
-                                <!-- eSports image container -->
-                                <div class="thumbnail">
-                                    <img src="assets/images/eSports.jpg" alt="eSports">
-                                    <!-- Descriptive banner overlapping photo -->
-                                    <div class="caption">
-                                        <h4 class="text-center bannerColor">eSports</h4>
-                                        <!-- End of Descriptive banner overlapping photo -->
+                                <!-- Colosseum RPG container -->
+                                <a href="https://paullnh.github.io/Colosseum-RPG/index.html" target="_blank">
+                                    <div class="thumbnail">
+                                        <img src="assets/images/colosseum.jpg" alt="eSports">
+                                        <!-- Descriptive banner overlapping photo -->
+                                        <div class="caption">
+                                            <h4 class="text-center bannerColor">Colosseum RPG</h4>
+                                            <!-- End of Descriptive banner overlapping photo -->
+                                        </div>
+                                        <!-- End of Colosseum RPG image container -->
                                     </div>
-                                    <!-- End of eSports image container -->
-                                </div>
-                                <!-- End of eSports colums -->
+                                </a>
+                                <!-- End of Colosseum RPG colums -->
                             </div>
 
                             <!-- End of 1st row -->
