Added Trivia game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,15 +100,17 @@
                             <!-- Working out colums -->
                             <div class="col-sm-6">
                                 <!-- Working out image container -->
-                                <div class="thumbnail">
-                                    <img src="assets/images/gym.jpg" alt="Those sweet gainz">
-                                    <!-- Descriptive banner overlapping photo -->
-                                    <div class="caption">
-                                        <h4 class="text-center bannerColor">Working Out</h4>
-                                        <!-- End of Descriptive banner overlapping photo -->
+                                <a href="https://paullnh.github.io/Trivia/index.html" target="_blank">
+                                    <div class="thumbnail">
+                                        <img src="assets/images/trivia.png" alt="GoT Trivia">
+                                        <!-- Descriptive banner overlapping photo -->
+                                        <div class="caption">
+                                            <h4 class="text-center bannerColor">GoT Trivia</h4>
+                                            <!-- End of Descriptive banner overlapping photo -->
+                                        </div>
+                                        <!-- End of Working out image container -->
                                     </div>
-                                    <!-- End of Working out image container -->
-                                </div>
+                                </a>
                                 <!-- End of Working out colums -->
                             </div>
 
