Added Stream Scout to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,16 +116,18 @@
 
                             <!-- Hike NH colums -->
                             <div class="col-sm-6">
-                                <!-- Hike NH image container -->
-                                <div class="thumbnail">
-                                    <img src="assets/images/hikeNH.jpg" alt="Explore NH">
-                                    <!-- Descriptive banner overlapping photo -->
-                                    <div class="caption">
-                                        <h4 class="text-center bannerColor">Hike NH</h4>
-                                        <!-- End of Descriptive banner overlapping photo -->
+                                <!-- Stream Scout image container -->
+                                <a href="https://paullnh.github.io/Stream-Scout/index.html" target="_blank">
+                                    <div class="thumbnail">
+                                        <img src="assets/images/streamscout.PNG" alt="Stream Scout">
+                                        <!-- Descriptive banner overlapping photo -->
+                                        <div class="caption">
+                                            <h4 class="text-center bannerColor">Stream Scout</h4>
+                                            <!-- End of Descriptive banner overlapping photo -->
+                                        </div>
+                                        <!-- End of Hike NH image container -->
                                     </div>
-                                    <!-- End of Hike NH image container -->
-                                </div>
+                                </a>
                                 <!-- End of Hike NH colums -->
                             </div>
 
